# diffvg

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  aabb.h  atomic.cpp  atomic.h  cdf.h  color.cpp  color.h  compute_distance.h  diffvg.cpp  diffvg.h  edge_query.h  environment.yml  filter.h  install_onedrive.sh  matrix.h  parallel.h  pcg.h  ptr.h  pyproject.toml  requirements.txt  sample_boundary.h  scene.cpp  scene.h  setup.py  setup.sh  shape.cpp  shape.h  solve.h  vector.h  winding_number.h  within_distance.h
apps/: .gitignore  Makefile  batch_diffvg.py  cicada_db.py  cicada_rendering.py  curve_subdivision.py  finite_difference_comp.py  gaussian_blur.py  geometry.py  image_compare.py  optimize_pixel_filter.py  painterly_rendering.py  quadratic_distance_approx.py  refine_svg.py  render_svg.py  seam_carving.py  shared_edge_compare.py  simple_transform_svg.py  single_circle.py  single_circle_outline.py  single_circle_sdf.py  single_circle_tf.py  single_curve.py  single_curve_outline.py  single_curve_sdf.py  single_curve_sdf_trans.py  single_curve_tf.py  single_ellipse.py  single_ellipse_transform.py  single_gradient.py  single_open_curve.py  single_open_curve_thickness.py  single_path.py  single_path_sdf.py  single_polygon.py  single_rect.py  single_stroke.py  single_stroke_tf.py  sketch_gan.py  style_transfer.py  (+5 more)
apps/generative_models/: .gitignore  README.md  data.py  eval_gan.py  losses.py  mnist_vae.py  models.py  modules.py  rendering.py  sketch_rnn.py  sketch_vae.py  train_gan.py
apps/imgs/: license.txt
apps/imgs/seamcarving/: license.txt
apps/textureSyn/: make_gif.py  patchBasedTextureSynthesis.py
pydiffvg/: __init__.py  color.py  device.py  image.py  optimize_svg.py  parse_svg.py  pixel_filter.py  render_pytorch.py  save_svg.py  shape.py
pydiffvg_tensorflow/: __init__.py  color.py  image.py  pixel_filter.py  render_tensorflow.py  shape.py
pydiffvg_tensorflow/custom_ops/: CMakeLists.txt  data_ptr.cc
