[tool.poetry]
name = "diffvg"
version = "0.1.0"
description = ""
authors = ["Marco Lee <marco@goodnotesapp.com>"]

[tool.poetry.dependencies]
python = "=3.8"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]
torch = "^1.8.1"
torchvision = "^0.9.1"
numpy = "^1.20.2"
scikit-image = "^0.18.1"
svgwrite = "^1.4.1"
svgpathtools = "^1.4.1"
cssutils = "^2.2.0"
numba = "^0.53.1"
torch-tools = "^0.1.5"
visdom = "^0.1.8"
cmake = "^3.18.4"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
